apps/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.17.2969
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - NET_RAW
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 8989
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 8989
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          volumeMounts:
            - name: sonarr-pvc
              mountPath: /config
            - name: media-nfs
              mountPath: /mnt/media
              readOnly: false
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: sonarr-pvc
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: media-nfs
          nfs:
            server: 192.168.20.12
            path: /mnt/ssd1/media
        - name: tmp-volume
          emptyDir: {}
